# DIPPER

./: .gitignore  404.html  CMakeLists.txt  LICENSE  README.md  index.html  mkdocs.yml  run_commands_gpu_parallel.sh  run_commands_gpu_serial.sh
.github/workflows/: ci.yml
DPX/: smith_waterman
SparseMM/: .accelerated.cu.swp  accelerated.cu  cudaErrorHandling.h  matmulexample.cpp  naive.cpp
SparseMM/benchmarking/: README.md  cpuOnly.cpp  cusparse_1.nsys-rep  cusparse_total100.nsys-rep  gpuAccel_kernel100.nsys-rep
benchmarking/: README.md  cpuOnly.cpp  cpuOnly.nsys-rep  cusparse.cpp  cusparse.nsys-rep  cusparse_1.nsys-rep  cusparse_kernel100.nsys-rep  cusparse_total100.nsys-rep  cusparse_total32k.nsys-rep  generateMatrix.hpp  gpuAccel.cpp  gpuAccel.cu  gpuAccel.nsys-rep  gpuAccel_1.nsys-rep  gpuAccel_kernel100.nsys-rep  gpuAccel_total100.nsys-rep  gpuAccel_total32k.nsys-rep
dataset/: sars_200.nwk  sars_2000.nwk  t2.backbone.nwk
docker/: Dockerfile
docs/: index.md
docs/styles/: extra.css
dpx_smithwaterman/: smith_waterman.cu
install/: installDependencies.sh  installUbuntu.sh
llk/: core_likelihood_fp32.cpp  core_likelihood_fp32.hpp  llk_fp32.cpp  llk_fp32_gpu.cu  plot.py  tree_fp32.cpp
placement/: CMakeLists.txt
placement/src/: MSA.cu  cluster_and_combine.cpp  divide_conquer_test.cpp  fourBitCompressor.cpp  mash.cu  mash_placement.cu  mash_placement.cuh  matrix_reader.cu  placement copy.cu  placement.cu  placement_close_k.cu  placement_multiple_kernels.cu  test  tree_generation.cpp
placement/src/divide_and_conquer/: MSA.cu  mash.cu  mash_placement.cuh  placement_close_k.cu  tree_generation_divide_and_conquer.cpp
placement/test/: commands.sh  commands_rna.sh  cpuout.nwk  create_npy.py  gen_newick.cpp  gen_newick.out  modified_tree.phy  normal.nwk  poly.nwk  rawtree.phy  remove_extra_characters_in_rapidnj.py  rna_out.tree  sample.nwk  snj_postprocessing.py  test.py  test.sh  test3.py  tree.nwk
placement/test/apples-ii_testing/: apples-ii_commands.sh  convert_backbone  convert_backbone.cpp  convert_place  convert_place.cpp  output.nwk  processed.nwk  remove_bracket.py
placement/test/phastsim_dataset/: estimated_tree.nwk  nj_tree.nwk
placement/testing/: CMakeCache.txt  EquidistantData.aln  clustering.cu  clusteringGPU  clusteringOld.cu  clusteringSerial  clusteringSerial.cpp  clusteringV2.cu  clusteringV3.cu  clusteringV3GPU  jukesCantorTesting.py  sequenceGenerator.py  sol
run_logs/: parallel_sars200.txt  serial_sars200.txt
scripts/: alisim.sh  astralPro.sh  bl_scale.py  bscampp_input.py  concatContigs.py  experiment.sh  format_converter.py  generateAlisimDatasets.sh  generateRNASimDataset.sh  iterative.sh  lower_to_full_phylip  lower_to_full_phylip.cpp  mash.sh  mash_dist.sh  mashtree-gpu.sh  nrf.sh  parse_rapidnj.py  phylip_to_tab  phylip_to_tab.cpp  prune_fasta  prune_fasta.cpp  prune_fasta_from_newick  prune_fasta_from_newick.cpp  prune_tree  prune_tree.cpp  prune_tree.py  remove_sequences_from_fasta.py  snj_msa_input.py  vmPeak.sh
search/: search_index.json
src/: MSA.cu  a.out  createSketch.cpp  createSketch.hpp  distanceMatrix.cpp  distanceMatrix.hpp  divide_conquer_test.cpp  fourBitCompressor.cpp  fourBitCompressor.hpp  gen_newick.cpp  input.txt  mash.cu  mash.cuh  mashDistance.cpp  mashDistance.hpp  mash_original.cu  mash_placement.cuh  mash_serial.cu  mash_sumit.cu  mash_sumit.cuh  msa.cpp  murmurHash3.cpp  murmurHash3.hpp  neighborJoining.cu  neighbourJoining.cpp  neighbourJoining.cu  neighbourJoining.cuh  output.txt  placement.cpp  placement.cu  placement.cuh  placement_close_k.cu  query  query.cu  rapidNJ.cu  rapidNJ.cuh  test.cu  test_mash_placement.cpp  test_placement.cpp  tree.cpp  (+7 more)
src/divide_and_conquer/: mash.cpp  mash.cu  mash_placement.cuh  msa.cu  placement_close_k.cpp  placement_close_k.cu  tree_generation_divide_and_conquer.cpp
test/: TianJi.py  generateDistanceMatrix.cpp  hashFuncCheck.cpp  test.py  test2.py  test3.py  test4.py  test_mash.cpp  test_mashTree.cpp  test_mash_gpu.cpp  test_mash_gpu_serial.cpp  test_nj.cpp  test_step1.cpp
test_data/: EOG5B2RC0.aln  EOG5B2RC0.best.treefile  Gene_0007.best.treefile  test_mash_gpu.cpp
